--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -12,8 +12,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@workspace/math": "workspace:*",
+    "@workspace/backend": "workspace:*",
     "@workspace/ui": "workspace:*",
+    "convex": "1.25.4",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
