--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -12,6 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.38.1",
     "@workspace/backend": "workspace:*",
     "@workspace/ui": "workspace:*",
     "convex": "1.25.4",
